# reporting

./: .gitignore  README.md  README.ru.md  pyproject.toml
src/reporting/: __init__.py  generator.py
src/reporting/templates/: report.md.j2
tests/: test_generator.py
