[project]
name = "reporting"
version = "0.1.0"
description = "Reporting engine for VLMHyperBench"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas>=2.2.0",
    "jinja2>=3.1.0",
    "pydantic>=2.0.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[tool.uv]
package = true

[build-system]
requires = ["uv_build>=0.9.26"]
build-backend = "uv_build"